--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -64,9 +64,13 @@
         },
         "eventLabels" : {
             "listPlayers" : "Liste joueurs",
+            "goalkeeper" : "Gardien",
             "player": "Joueur",
             "position": "Poste",
-            "efficiency": "Efficatité (B/T)",
+            "efficiency": "Efficatité",
+            "shoot": "But/Tir",
+            "efficiencyGoal": "% Arrêt",
+            "stop": "Arrêt/Tir",
             "attack": "Attaque (+/-)",
             "defense": "Defense (+/-)",
             "yellowCard": "CJ",
