--- a/src/app/components/i18n/user/en.json
+++ b/src/app/components/i18n/user/en.json
@@ -44,7 +44,7 @@
 	        	"female" : "Madam"
 	        },
 	        "userBirthDate" : "Date de naissance",
-	        "userNationality" : "Nationalité",
+	        "userAddress" : "Address",
 	        "userEMail" : "e-Mail",
 	        "userPhoneNumber" : "Numéros de téléphone",
 	        "userPhoneHome" : "Domicile",
