Formulaire signup (Alignement Label/input) + Profil form

--- a/src/app/components/i18n/profile/en.json
+++ b/src/app/components/i18n/profile/en.json
@@ -50,6 +50,9 @@
         "ko": "Wrong email address",
         "required": "Email required",
         "exists": "This e-mail address already exists"
+      },
+      "userLogin": {
+        "required": "Login required"  
       }
     }
   }
