--- a/src/app/components/i18n/profile/en.json
+++ b/src/app/components/i18n/profile/en.json
@@ -1,59 +1,60 @@
 {
-  "profile": {
-    "stats": "My statistics",
-    "info": "My informations",
-    "account": "My subscription",
-    "title": "Profile",
-    "desc": "Edit your profile <b>Qaobee</b>.",
-    "plan":  {
-      "desc" : "Manage your invoices"
-    },
-    "label": {
-      "name": "Name",
-      "forname": "First name",
-      "nick": "Username",
-      "address": "Address",
-      "zipcode": "Postal code",
-      "city": "City",
-      "email": "E-mail",
-      "birthdate": "Birthdate",
-      "passwd1": "Password",
-      "passwd2": "Repeat password",
-      "avatar": "Your profile photo",
-      "mandatory": "Fields in red are required",
-      "clubadmin": "Club Administrator",
-      "billingdate": "Payment date",
-      "billingnumber": "Invoice number",
-      "product": "Product",
-      "price": "Price",
-      "activity": "Activity"
-    },
-    "ph": {
-      "name": "Enter your name",
-      "forname": "Enter your first name",
-      "nick": "Choose a username",
-      "address": "Enter your address",
-      "zipcode": "Enter your postal code",
-      "city": "Enter your city",
-      "email": "Enter your email address",
-      "birthdate": "Enter your date of birth",
-      "passwd1": "Enter if you want to change the password"
-    },
-    "message": {
-      "passwd": {
-        "strength": "Password strength",
-        "ko": "Passwords do not match",
-        "ok": "Password OK"
-      },
-      "email": {
-        "ok": "Verified email",
-        "ko": "Wrong email address",
-        "required": "Email required",
-        "exists": "This e-mail address already exists"
-      },
-      "userLogin": {
-        "required": "Login required"  
-      }
+    "profile": {
+        "tabs" : {  
+            "stats": "Stats",
+            "profil": "Profil",
+            "password": "Password",
+            "billing": "Billing",
+            "sharing": "Invitation",
+            "notification": "Notifications",
+            "settings": "Settings"
+        },
+        "label": {
+            "name": "Name",
+            "forname": "First name",
+            "nick": "Username",
+            "address": "Address",
+            "zipcode": "Postal code",
+            "city": "City",
+            "email": "E-mail",
+            "birthdate": "Birthdate",
+            "passwd1": "Password",
+            "passwd2": "Repeat password",
+            "avatar": "Your profile photo",
+            "mandatory": "Fields in red are required",
+            "clubadmin": "Club Administrator",
+            "billingdate": "Payment date",
+            "billingnumber": "Invoice number",
+            "product": "Product",
+            "price": "Price",
+            "activity": "Activity"
+        },
+        "ph": {
+            "name": "Enter your name",
+            "forname": "Enter your first name",
+            "nick": "Choose a username",
+            "address": "Enter your address",
+            "zipcode": "Enter your postal code",
+            "city": "Enter your city",
+            "email": "Enter your email address",
+            "birthdate": "Enter your date of birth",
+            "passwd1": "Enter if you want to change the password"
+        },
+        "message": {
+            "passwd": {
+                "strength": "Password strength",
+                "ko": "Passwords do not match",
+                "ok": "Password OK"
+            },
+            "email": {
+                "ok": "Verified email",
+                "ko": "Wrong email address",
+                "required": "Email required",
+                "exists": "This e-mail address already exists"
+            },
+            "userLogin": {
+                "required": "Login required"  
+            }
+        }
     }
-  }
 }
