Remarques de samedi sur stats et tabs

--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -60,7 +60,7 @@
             "redCard" : "Exclusion"
         },
         "teamLabels" : {
-            "listCollect" : "Evénements collectés"
+            "listCollect" : "Evénements concernés"
         },
         "eventLabels" : {
             "listPlayers" : "Liste joueurs",
