Widget Profile Data

--- a/src/app/components/i18n/profile/en.json
+++ b/src/app/components/i18n/profile/en.json
@@ -27,7 +27,8 @@
             "billingnumber": "Invoice number",
             "product": "Product",
             "price": "Price",
-            "activity": "Activity"
+            "activity": "Activity",
+            "avatar":"Drag and drop avatar here"
         },
         "ph": {
             "name": "Enter your name",
