--- a/src/app/components/i18n/profile/fr.json
+++ b/src/app/components/i18n/profile/fr.json
@@ -27,7 +27,8 @@
             "billingnumber": "Numéro de facture",
             "product": "Produit",
             "price": "Prix",
-            "activity": "Activité"
+            "activity": "Activité",
+            "avatar":"Déposer la photo ici"
         },
         "ph": {
             "name": "Saisissez votre nom",
