--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -36,8 +36,7 @@
 	},
     "civilSection" : {
     	"line1" : "Votre inscription est presque terminée !",
-    	"line2" : "Ces dernières étapes vont permettre la création de votre espace personnel et l'accès à votre assistant personnel de collecte et d'analyse en temps réel de données sportives.",
-    	"line3" : "Veuillez renseigner au moins un numéro de téléphone",
+    	"line2" : "Ces dernières étapes vont permettre la création de votre espace personnel et l'accès à votre assistant personnel de collecte et d'analyse de données de performance en temps réel.",
     	
     	"label" : {
 	        "userSignupCivilSection" : "Informations personnelles",
