--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -1,5 +1,8 @@
 {
   "stats": {
+    "buttons" : {
+      "timeline" : "Détail"
+    },
     "positionType": {
       "libelle": "Poste",
       "value": {
