--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -7,6 +7,7 @@
             "date": {
                 "pattern": "MM/dd/yyyy",
                 "label": "mm/dd/yyyy",
+                "moment": "MM/DD/YYYY",
                 "listMonth": "January,February,March,April,May,June,July,August,September,October,November,December",
                 "listMonthShort":"Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec",
                 "listWeekdaysFull":"Sunday,Monday,Tuesday,Wednesday,Thursday,Friday,Saturday",
